# static_dynamic

./: .gitignore  config.yaml  pyproject.toml
bash_scripts/: imagenet_ipca_dipsen.slrm  par_imagenet_ipca_dipsen.slrm
python_scripts/scripts/: ipca_imagenet_imgANN.ipynb  ipca_imagenet_imgANN_dev.ipynb  ipca_imagenet_prototype.ipynb  load_george_movie.ipynb  run_imagenet_ipca.py  run_par_imagenet_ipca.py  visualize_imagenet_validation.ipynb
python_scripts/src/image_processing/: feature_extraction.py
python_scripts/src/project_specific_utils/: __init__.py  dataloader.py
